# percas

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASE.md  licenserc.toml  rust-toolchain.toml  rustfmt.toml  sgconfig.yml  taplo.toml
.cargo/: config.toml
.github/: semantic.yml
.github/actions/docker-push-by-digest/: action.yml
.github/actions/docker-release/: action.yml
.github/actions/docker-sanity-check/: action.yml
.github/workflows/: ci.yml  merge.yml  release.yml
.lints/rules/: deny-import-log.yml  deny-import-serde-json.yml  deny-import-super.yml
.lints/tests/: deny-import-log-test.yml  deny-import-serde-json-test.yml  deny-import-super.yml
.lints/tests/__snapshots__/: deny-import-log-snapshot.yml  deny-import-serde-json-snapshot.yml  deny-import-super-snapshot.yml
.lints/utils/: inline-snap.yml  post-format.yml  pre-format.yml
api/client/: Cargo.toml
api/client/src/: builder.rs  client.rs  lib.rs
atrium-client/: Cargo.toml
atrium-client/src/: builder.rs  client.rs
atrium-core/: Cargo.toml
atrium-core/benches/: benchmark.rs
atrium-core/src/: config.rs  engine.rs  lib.rs  main.rs  server.rs  util.rs
atrium-metrics/: Cargo.toml
atrium-server/: Cargo.toml
atrium-server/src/: lib.rs  main.rs  server.rs
client/: CHANGELOG.md  Cargo.toml  README.md
client/src/: client.rs  lib.rs  protos.rs  route.rs
cmd/atrium/: Cargo.toml
cmd/atrium/src/: main.rs
cmd/percas/: Cargo.toml
cmd/percas/src/: CHANGELOG.md  config.rs  main.rs  start.rs  styled.rs
crates/cluster/: Cargo.toml
crates/cluster/src/: gossip.rs  lib.rs  member.rs  node.rs  proxy.rs  ring.rs
crates/core/: Cargo.toml
crates/core/benches/: benchmark.rs
crates/core/src/: config.rs  engine.rs  lib.rs  newtype.rs  runtime.rs
crates/gossip/: Cargo.toml
crates/gossip/src/: gossip.rs  lib.rs  member.rs  node.rs  proxy.rs  ring.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs  middleware.rs  runtime.rs  scheduled.rs  server.rs  telemetry.rs
crates/styled/: Cargo.toml
crates/styled/src/: lib.rs
crates/version/: Cargo.toml  build.rs
crates/version/src/: lib.rs
deploy/helm/: .gitignore  .pre-commit-config.yaml  Makefile
deploy/helm/charts/percas/: .helmignore  Chart.yaml  values.yaml
deploy/helm/charts/percas/templates/: NOTES.txt  _helpers.tpl  _percas.tpl  _validation.tpl  configmap.yaml  headless-service.yaml  networkpolicy.yaml  service.yaml  serviceaccount.yaml  statefulset.yaml
deploy/helm/tools/helm/: plugin_unittest.mk  plugins.mk
dev/: config.toml
dev/cluster/: config-0.toml  config-1.toml  config-2.toml
dev/standalone/: config.toml
tests/: Cargo.toml
tests/behavior/: Cargo.toml
tests/behavior/src/: lib.rs
tests/behavior/tests/: common_tests.rs
tests/src/: lib.rs
tests/tests/: common_tests.rs
tests/toolkit/: Cargo.toml
tests/toolkit/src/: lib.rs
xtask/: Cargo.toml
xtask/scripts/: check-version-tag-match.sh  docker-build.sh
xtask/src/: main.rs
