# Copyright 2025 ScopeDB <contact@scopedb.io>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
members = [
  "api/client",
  "cmd/percas",
  "crates/cluster",
  "crates/core",
  "crates/metrics",
  "crates/server",
  "crates/version",
  "tests/behavior",
  "tests/toolkit",
  "xtask",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/scopedb/percas/"
version = "0.2.5"

[workspace.dependencies]
# Workspace members
percas = { version = "0.2.5", path = "cmd/percas" }
percas-client = { version = "0.2.5", path = "api/client" }
percas-cluster = { version = "0.2.5", path = "crates/cluster" }
percas-core = { version = "0.2.5", path = "crates/core" }
percas-metrics = { version = "0.2.5", path = "crates/metrics" }
percas-server = { version = "0.2.5", path = "crates/server" }
percas-version = { version = "0.2.5", path = "crates/version" }
tests-toolkit = { version = "0.2.5", path = "tests/toolkit" }

# Crates.io dependencies
anstyle = { version = "1.0.10" }
arc-swap = { version = "1" }
backon = { version = "1.5.0" }
build-data = { version = "0.3.0" }
clap = { version = "4.5.35", features = ["derive"] }
const_format = { version = "0.2.34" }
criterion = { version = "0.7.0", features = ["async_tokio"] }
ctrlc = { version = "3.4", features = ["termination"] }
exn = { version = "0.1.0" }
fastimer = { version = "0.9.0" }
fastrace = { version = "0.7.9" }
fastrace-opentelemetry = { version = "0.13.0" }
foyer = { version = "0.19.2", features = ["nightly"] }
futures-util = { version = "0.3.31" }
gix-discover = { version = "0.41.0" }
googletest = { version = "0.14.0" }
humansize = { version = "2.1.3" }
indent = { version = "0.1.1" }
insta = { version = "1.42.2" }
jemallocator = { version = "0.5.4" }
jiff = { version = "0.2", features = ["serde"] }
local-ip-address = { version = "0.6.3" }
log = { version = "0.4.27", features = ["kv"] }
logforth = { version = "0.27.0", features = [
  "colored",
  "append-fastrace",
  "append-opentelemetry",
  "append-rolling-file",
  "diagnostic-fastrace",
  "layout-json",
] }
mea = { version = "0.4.2" }
mixtrics = { version = "0.2", features = ["opentelemetry_0_30"] }
opentelemetry = { version = "0.30.0", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.30.0", features = [
  "trace",
  "metrics",
  "grpc-tonic",
] }
opentelemetry_sdk = { version = "0.30.0", features = [
  "trace",
  "metrics",
  "rt-tokio",
] }
pin-project = { version = "1.1" }
poem = { version = "3.1.7" }
pretty-hex = { version = "0.4.1" }
pretty_assertions = { version = "1.4.1" }
regex = { version = "1.11.1" }
reqwest = { version = "0.12.15", default-features = false, features = ["json"] }
schemars = { version = "1.0.4", features = ["jiff02"] }
scopeguard = { version = "1.2.0" }
sealed_test = { version = "1.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha2 = { version = "0.10.8" }
shadow-rs = { version = "1.0.0", default-features = false }
sysinfo = { version = "0.37.0" }
tempfile = { version = "3.19.1" }
test-harness = { version = "0.3.0" }
thiserror = { version = "2.0" }
tokio = { version = "1.44.2" }
toml_edit = { version = "0.23.2" }
unindent = { version = "0.2.4" }
uuid = { version = "1.16.0", features = ["v7", "serde"] }

[workspace.lints.rust]
unknown_lints = "deny"
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
field_reassign_with_default = "allow"
manual_range_contains = "allow"
new_without_default = "allow"

[workspace.metadata.release]
pre-release-commit-message = "chore: release v{{version}}"
shared-version = true
sign-tag = true
tag-name = "v{{version}}"

[profile.release]
debug = true
lto = "thin"

[profile.dist]
codegen-units = 1
debug = true
inherits = "release"
lto = "fat"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
