[package]
name = "atrium-client"

edition.workspace = true
version.workspace = true

[dependencies]
base64 = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
error-stack = { workspace = true }
fastrace = { workspace = true }
foyer = { workspace = true }
log = { workspace = true }
logforth = { workspace = true }
poem = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
urlencoding = { workspace = true }

[lints]
workspace = true
