[package]
name = "atrium"

edition.workspace = true
version.workspace = true

[dependencies]
bytes = { workspace = true }
clap = { workspace = true }
fastrace = { workspace = true }
foyer = { workspace = true }
log = { workspace = true }
logforth = { workspace = true }
poem = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
