[package]
name = "atrium-core"

edition.workspace = true
version.workspace = true

[dependencies]
error-stack = { workspace = true }
foyer = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
