[package]
name = "atrium"

edition.workspace = true
version.workspace = true

[dependencies]
atrium-core = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
error-stack = { workspace = true }
fastrace = { workspace = true }
foyer = { workspace = true }
log = { workspace = true }
logforth = { workspace = true }
poem = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
