[package]
name = "atrium"

edition.workspace = true
version.workspace = true

[dependencies]
atrium-core = { workspace = true }
clap = { workspace = true }
error-stack = { workspace = true }
local-ip-address = { workspace = true }
log = { workspace = true }
logforth = { workspace = true }
mea = { workspace = true }
poem = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
urlencoding = { workspace = true }

[lints]
workspace = true
