[package]
name = "atrium"

edition.workspace = true
version.workspace = true

[dependencies]
atrium-core = { workspace = true }
atrium-metrics = { workspace = true }
clap = { workspace = true }
error-stack = { workspace = true }
fastimer = { workspace = true }
fastrace = { workspace = true }
fastrace-opentelemetry = { workspace = true }
local-ip-address = { workspace = true }
log = { workspace = true }
logforth = { workspace = true }
mea = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
poem = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
urlencoding = { workspace = true }

[lints]
workspace = true
