# Copyright 2025 ScopeDB <contact@scopedb.io>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "percas-client"
version = "0.3.1"

description = "A client for talking to the Percas server"
publish = true
readme = "README.md"

edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.release]
pre-release-commit-message = "chore: Release {{crate_name}} version {{version}}"
sign-commit = true
sign-tag = true
tag-message = "chore: Release {{crate_name}} version {{version}}"

[dependencies]
fastrace-reqwest = { workspace = true }
mur3 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
