[package]
name = "x"

edition.workspace = true
version.workspace = true

[dependencies]
clap = { workspace = true }
indent = { workspace = true }
pretty_assertions = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
styled = { workspace = true }
unindent = { workspace = true }

[lints]
workspace = true
