[package]
name = "percas"

edition.workspace = true
version.workspace = true

[dependencies]
clap = { workspace = true }
error-stack = { workspace = true }
fastimer = { workspace = true }
fastimer-tokio = { workspace = true }
log = { workspace = true }
percas-core = { workspace = true }
percas-server = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }

[lints]
workspace = true
