# Copyright 2025 ScopeDB <contact@scopedb.io>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "percas"
publish = false

description = "A persistent cache service."

edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anstyle = { workspace = true }
clap = { workspace = true }
ctrlc = { workspace = true }
exn = { workspace = true }
log = { workspace = true }
mea = { workspace = true }
mixtrics = { workspace = true }
percas-core = { workspace = true }
percas-metrics = { workspace = true }
percas-server = { workspace = true }
percas-version = { workspace = true }
serde = { workspace = true }
toml_edit = { workspace = true, features = ["serde"] }
uuid = { workspace = true }

[dev-dependencies]
sealed_test = { workspace = true }

[lints]
workspace = true
