# Copyright 2025 ScopeDB <contact@scopedb.io>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "percas-cluster"
publish = false

description = "The cluster service for Percas."

edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.release]
release = false

[dependencies]
backon = { workspace = true }
error-stack = { workspace = true }
fastimer = { workspace = true }
jiff = { workspace = true }
log = { workspace = true }
mea = { workspace = true }
percas-core = { workspace = true }
poem = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
