[package]
name = "percas-core"

edition.workspace = true
version.workspace = true

[dependencies]
error-stack = { workspace = true }
foyer = { workspace = true }
jiff = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
humansize = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true

[[bench]]
harness = false
name = "benchmark"
