# Copyright 2025 ScopeDB <contact@scopedb.io>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "percas-core"
publish = false

description = "The core abstractions and engine implementations for the Percas server."

edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
exn = { workspace = true }
fastimer = { workspace = true }
foyer = { workspace = true }
jemallocator = { workspace = true }
jiff = { workspace = true }
log = { workspace = true }
mixtrics = { workspace = true }
pin-project = { workspace = true }
serde = { workspace = true }
sysinfo = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[dev-dependencies]
criterion = { workspace = true }
googletest = { workspace = true }
humansize = { workspace = true }
insta = { workspace = true }
schemars = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true

[[bench]]
harness = false
name = "benchmark"
