[package]
name = "percas-server"

edition.workspace = true
version.workspace = true

[dependencies]
fastimer = { workspace = true }
fastrace = { workspace = true }
fastrace-opentelemetry = { workspace = true }
local-ip-address = { workspace = true }
log = { workspace = true }
logforth = { workspace = true }
mea = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
percas-core = { workspace = true }
percas-metrics = { workspace = true }
poem = { workspace = true }
scopeguard = { workspace = true }
tokio = { workspace = true }
urlencoding = { workspace = true }

[lints]
workspace = true
