# Copyright 2025 ScopeDB <contact@scopedb.io>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "percas-server"
publish = false

description = "The Percas server that servers all requests."

edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.release]
release = false

[dependencies]
arc-swap = { workspace = true }
fastimer = { workspace = true }
fastrace = { workspace = true }
fastrace-opentelemetry = { workspace = true }
foyer = { workspace = true }
futures-util = { workspace = true }
local-ip-address = { workspace = true }
log = { workspace = true }
logforth = { workspace = true }
mea = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
percas-client = { workspace = true }
percas-cluster = { workspace = true }
percas-core = { workspace = true }
percas-metrics = { workspace = true }
poem = { workspace = true }
scopeguard = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
