[package]
name = "behavior-tests"

edition.workspace = true
version.workspace = true

[dependencies]
atrium-client = { workspace = true }
insta = { workspace = true }
pretty-hex = { workspace = true }
test-harness = { workspace = true }
tests-toolkit = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
