[package]
name = "behavior-tests"

edition.workspace = true
version.workspace = true

[dependencies]
insta = { workspace = true }
percas-client = { workspace = true }
pretty-hex = { workspace = true }
test-harness = { workspace = true }
tests-toolkit = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
