[package]
name = "tests-toolkit"

edition.workspace = true
version.workspace = true

[dependencies]
local-ip-address = { workspace = true }
percas-core = { workspace = true }
percas-server = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
